HPA/notes-deployment-Hpa.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes-deployment-hpa
  labels:
    app: notes-deployment-hpa
  namespace: my-notes
spec:
  
  replicas: 2
  selector:
    matchLabels:
      app: notes-deployment-hpa
  template:
    metadata:
      annotations:
        kubernetes.io/change-cause: notes:v1.1.7
      labels:
        app: notes-deployment-hpa
    spec:
      containers:
      - name: notes-deployment-hpa
        image: registry.prashanth.private:5000/notes:v1.1.7
        imagePullPolicy: Always
        securityContext:
          privileged: true
        ports:
        - containerPort: 800
        resources:
          requests:
            cpu: "50m"
            memory: "50Mi"
          limits:
            cpu: "100m"
            memory: "70Mi"
        volumeMounts:
          - mountPath: /etc/hosts
            name: hosts
          - mountPath: /var/log/nginx
            name: ngix-logs
      volumes:
        - name: hosts
          hostPath:
            path: /etc/hosts
            
        - name: ngix-logs
          hostPath:
            path: /var/log/nginx-hpa
